<resources>
    <string name="app_name">Traveler</string>
    <string name="header_title">Where do you\nwant to discover?</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="popular">Popular</string>
    <string name="alt">Image</string>
    <string name="rating">rating</string>
    <string name="place">place</string>
    <string name="location">location</string>
    <string name="place_image">Place Image</string>
    <string name="back_button">Back Button</string>
    <string name="share_button">Share Button</string>
    <string name="place_name">Place Name</string>
    <string name="review">Review</string>
    <string name="description">desc</string>
    <string name="maps">Location</string>
    <string name="book_button">Booking button</string>
    <string name="book">Book now</string>
    <string name="price">Price</string>
    <string name="price_value">$100</string>
    <string name="about_name">Rayhan Illyas Annabil</string>
    <string name="about">Rayhan Illyas Annabil</string>
    <string name="about_email">minato205732@gmail.com</string>
    <string name="about_button">Follow Rayhan</string>
    <string name="about_quote">“Intelligence is a privilege, and it needs to be used for the greater good of people.” \n- Dr. Otto Octavius</string>
    <string name="home">home</string>
    <string name="explore">explore</string>
    <string name="fav">favourite</string>
    <string name="settings">settings</string>

    <string-array name="category_name">
        <item>Mountain</item>
        <item>Forest</item>
        <item>Beach</item>
        <item>Sea</item>
        <item>Camp</item>
    </string-array>

    <string-array name="place_name">
        <item>Tokyo Tower</item>
        <item>Machu Pichu</item>
        <item>Rialto Bridge</item>
        <item>Kelingking Beach</item>
        <item>Yosemite Park</item>
        <item>Acropolis</item>
        <item>Antelope Canyon</item>
        <item>Bryggen</item>
        <item>Louvre</item>
        <item>Times Square</item>
    </string-array>

    <string-array name="place_location">
        <item>, Tokyo</item>
        <item>, Urubamba</item>
        <item>, Venice</item>
        <item>, Bali</item>
        <item>, California</item>
        <item>, Athens</item>
        <item>, Arizona</item>
        <item>, Bergen</item>
        <item>, Paris</item>
        <item>, New York</item>
    </string-array>

    <string-array name="place_rating">
        <item>4.7</item>
        <item>4.3</item>
        <item>4.7</item>
        <item>4.6</item>
        <item>4.8</item>
        <item>4.5</item>
        <item>4.6</item>
        <item>4.7</item>
        <item>4.7</item>
        <item>4.7</item>
    </string-array>

    <string-array name="place_price">
        <item>$50</item>
        <item>$170</item>
        <item>$50</item>
        <item>$30</item>
        <item>$100</item>
        <item>$45</item>
        <item>$30</item>
        <item>$30</item>
        <item>$50</item>
        <item>$20</item>
    </string-array>

    <string-array name="place_review">
        <item>(8568 Reviews)</item>
        <item>(5589 Reviews)</item>
        <item>(10.536 Reviews)</item>
        <item>(7654 Reviews)</item>
        <item>(15.423 Reviews)</item>
        <item>(6398 Reviews)</item>
        <item>(7254 Reviews)</item>
        <item>(7534 Reviews)</item>
        <item>(24.876 Reviews)</item>
        <item>(10.276 Reviews)</item>
    </string-array>

    <string-array name="place_description">
        <item>The Tokyo Tower is a communications and observation tower in the Shiba-koen district of Minato, Tokyo, Japan, built in 1958. At 332.9 meters (1,092 ft), it is the second-tallest structure in Japan. The structure is an Eiffel Tower-inspired lattice tower that is painted white and international orange to comply with air safety regulations.</item>
        <item>Machu Picchu is a 15th-century Inca citadel located in the Eastern Cordillera of southern Peru on a 2,430-meter (7,970 ft) mountain ridge. Often referred to as the "Lost City of the Incas", it is the most familiar icon of the Inca Empire. It is located in the Machupicchu District within Urubamba Province above the Sacred Valley, which is 80 kilometers (50 mi) northwest of Cusco.</item>
        <item>The Rialto Bridge is the oldest of the four bridges spanning the Grand Canal in Venice, Italy. Connecting the sestieri (districts) of San Marco and San Polo, it has been rebuilt several times since its first construction as a pontoon bridge in 1173, and is now a significant tourist attraction in the city.</item>
        <item>Kelingking Beach is a secluded and scenic beach in the village of Bunga Mekar on the southwestern coast of Nusa Penida Island. One of its most popular landmarks is a plant-covered limestone headland, with massive waves crashing against it. </item>
        <item>Yosemite National Park is an American national park in California, surrounded on the southeast by Sierra National Forest and on the northwest by Stanislaus National Forest. The park is managed by the National Park Service and covers an area of 759,620 acres (1,187 sq mi; 3,074 km2) in four counties – centered in Tuolumne and Mariposa, extending north and east to Mono and south to Madera County. Designated a World Heritage Site in 1984, Yosemite is internationally recognized for its cliffs, waterfalls, clear streams, giant sequoia groves, lakes, mountains, meadows, glaciers, and biological diversity.</item>
        <item>The Acropolis of Athens is an ancient citadel located on a rocky outcrop above the city of Athens and contains the remains of several ancient buildings of great architectural and historical significance, the most famous being the Parthenon. The word acropolis is from the Greek words ἄκρον (akron, "highest point, extremity") and πόλις (polis, "city"). The term acropolis is generic and there are many other acropoleis in Greece. During ancient times the Acropolis of Athens was known also more properly as Cecropia, after the legendary serpent-man, Cecrops, the supposed first Athenian king.</item>
        <item>Navajo Upper Antelope Canyon is a slot canyon in the American Southwest, on Navajo land east of Lechee, Arizona. It includes six separate, scenic slot canyon sections on the Navajo Reservation, referred to as Upper Antelope Canyon (or The Crack), Rattle Snake Canyon, Owl Canyon, Mountain Sheep Canyon, Canyon X and Lower Antelope Canyon (or The Corkscrew). It is the primary attraction of Lake Powell Navajo Tribal Park, along with a hiking trail to Rainbow Bridge National Monument.</item>
        <item>Bryggen (the dock), also known as Tyskebryggen, is a series of Hanseatic heritage commercial buildings lining up the eastern side of the Vågen harbour in the city of Bergen, Norway. Bryggen has been on the UNESCO list for World Cultural Heritage sites since 1979. The city of Bergen was founded around 1070 within the boundaries of Tyskebryggen. Around 1350 a Kontor of the Hanseatic League was established there, and Tyskebryggen became the centre of the Hanseatic commercial activities in Norway. Today, Bryggen houses museums, shops, restaurants and pubs.</item>
        <item>The Louvre Museum is the world\'s most-visited museum, and a historic landmark in Paris, France. It is the home of some of the best-known works of art, including the Mona Lisa and the Venus de Milo. A central landmark of the city, it is located on the Right Bank of the Seine in the city\'s 1st arrondissement (district or ward). At any given point in time, approximately 38,000 objects from prehistory to the 21st century are being exhibited over an area of 72,735 square meters (782,910 square feet). </item>
        <item>Times Square is a major commercial intersection, tourist destination, entertainment hub, and neighborhood in Midtown Manhattan, New York City. It is formed by the junction of Broadway, Seventh Avenue, and 42nd Street. Together with adjacent Duffy Square, Times Square is a bowtie-shaped space five blocks long between 42nd and 47th Streets.</item>
    </string-array>

    <integer-array name="place_photo">
        <item>@drawable/tokyo</item>
        <item>@drawable/machu</item>
        <item>@drawable/rialto</item>
        <item>@drawable/kelingking</item>
        <item>@drawable/yosemite</item>
        <item>@drawable/akropolis</item>
        <item>@drawable/antelope</item>
        <item>@drawable/bryggen</item>
        <item>@drawable/louvre</item>
        <item>@drawable/times</item>
    </integer-array>
</resources>