<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sanssemi"
                android:text="@string/header_title"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_profile"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="125dp"
                android:src="@drawable/rayhan" />

        </LinearLayout>

        <SearchView
            android:id="@+id/sv_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_header"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/searchview"
            android:iconifiedByDefault="false"
            android:queryBackground="@color/transparent"
            android:queryHint="@string/search"
            android:searchIcon="@drawable/baseline_search_24" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_categories"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/sv_place"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="16dp" />

        <!--   make card view for banner   -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_banner"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_below="@+id/rv_categories"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="32dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/iv_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/banner" />

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/ll_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_banner"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/sansmed"
                android:text="@string/popular"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_places"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp" />

        </LinearLayout>

<!--        <FrameLayout-->
<!--            android:id="@+id/fl_bottom_nav"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentBottom="true">-->

<!--            <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--                android:id="@+id/bnv_main"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="bottom"-->
<!--                android:layout_margin="20dp"-->
<!--                android:background="@drawable/bottom_nav"-->
<!--                android:elevation="5dp"-->
<!--                app:itemIconTint="@color/gray"-->
<!--                app:itemTextColor="@color/white"-->
<!--                app:labelVisibilityMode="unlabeled"-->
<!--                app:menu="@menu/bottom_nav_menu" />-->

<!--        </FrameLayout>-->

    </RelativeLayout>

</ScrollView>